--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">CtoyPro</string>
+    <string-array name="joke_category">
+        <item>random</item>
+        <item>animal</item>
+        <item>career</item>
+        <item>celebrity</item>
+        <item>dev</item>
+        <item>explicit</item>
+        <item>fashion</item>
+        <item>food</item>
+        <item>history</item>
+        <item>money</item>
+        <item>movie</item>
+        <item>music</item>
+        <item>political</item>
+        <item>religion</item>
+        <item>science</item>
+        <item>sport</item>
+        <item>travel</item>
+
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
